--- a/main/sapi5/MkVoice/mkvoice.vcproj
+++ b/main/sapi5/MkVoice/mkvoice.vcproj
@@ -25,7 +25,6 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="xcopy $(ProjectDir)mkvoice.py $(TargetDir) /Y"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -73,7 +72,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\Debug\mkvoice.exe"
+				OutputFile=".\Debug\mkvoice.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="&quot;C:\Program Files\Microsoft Speech SDK 5.1\Lib\i386&quot;"
